--- a/new/package.json
+++ b/new/package.json
@@ -16,12 +16,18 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.3.3",
+    "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.13",
+    "postcss-import": "^14.1.0",
+    "postcss-nested": "^5.0.6",
+    "poststylus": "^1.0.1",
     "pug": "^3.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.72.1",
     "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-pug": "^1.1.1",
     "stylus": "^0.57.0",
     "tailwindcss": "^3.0.24"
