--- a/new/package.json
+++ b/new/package.json
@@ -15,14 +15,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.3.3",
+    "@11ty/eleventy": "^1.0.1",
+    "alpinejs": "^3.10.2",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
+    "kute.js": "^2.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.13",
     "postcss-import": "^14.1.0",
     "postcss-nested": "^5.0.6",
-    "poststylus": "^1.0.1",
+    "poststylus": "^1.0.0",
     "pug": "^3.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.72.1",
