--- a/new/package.json
+++ b/new/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "alpinejs": "^3.10.2",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
+    "keen-slider": "^6.6.14",
     "kute.js": "^2.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.13",
