--- a/new/package.json
+++ b/new/package.json
@@ -35,5 +35,8 @@
     "rollup-plugin-pug": "^1.1.1",
     "stylus": "^0.57.0",
     "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "@11ty/eleventy-img": "^2.0.1"
   }
 }
