--- a/new/package.json
+++ b/new/package.json
@@ -34,7 +34,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-pug": "^1.1.1",
     "stylus": "^0.57.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "tweakpane": "^3.1.0"
   },
   "dependencies": {
     "@11ty/eleventy-img": "^2.0.1"
