--- a/new/package.json
+++ b/new/package.json
@@ -20,9 +20,9 @@
     "alpinejs": "^3.10.2",
     "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
-    "keen-slider": "^6.6.14",
     "kute.js": "^2.2.2",
     "npm-run-all": "^4.1.5",
+    "popmotion": "^11.0.5",
     "postcss": "^8.4.13",
     "postcss-import": "^14.1.0",
     "postcss-nested": "^5.0.6",
@@ -31,6 +31,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.72.1",
     "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-pug": "^1.1.1",
     "stylus": "^0.57.0",
