--- a/new/package.json
+++ b/new/package.json
@@ -36,6 +36,7 @@
     "rollup-plugin-pug": "^1.1.1",
     "stylus": "^0.57.0",
     "tailwindcss": "^3.0.24",
+    "three": "^0.145.0",
     "tweakpane": "^3.1.0"
   },
   "dependencies": {
